--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,17 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
+		
+		</dependency>
+		<dependency>		    
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.2.3</version>		 
+		</dependency>
+		<dependency>		    
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>1.2.3</version>		 
 		</dependency>
 
 		<dependency>
