--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,16 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
-		
+		   <exclusions>
+		        <exclusion>
+		          <groupId>ch.qos.logback</groupId>
+		          <artifactId>logback-classic</artifactId>
+		        </exclusion>
+		        <exclusion>
+		          <groupId>ch.qos.logback</groupId>
+		          <artifactId>logback-core</artifactId>
+		        </exclusion>
+      		</exclusions>
 		</dependency>
 		<dependency>		    
 			<groupId>ch.qos.logback</groupId>
